create user update router & doc
